--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -16,12 +16,9 @@
       <div class="col-md-3">
         <div class="container" id="container-left">
           <img src="../../../../static/img/dashboard/me.jpg" id="my-photo">
-            <h5>
-              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-file-earmark-person" viewBox="0 0 16 16">
-              <path d="M11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-              <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9.5 3A1.5 1.5 0 0 0 11 4.5h2v9.255S12 12 8 12s-5 1.755-5 1.755V2a1 1 0 0 1 1-1h5.5v2z"/>
-              </svg> À propos de moi
-            </h5>
+            <h6>
+              À propos de moi
+            </h6>
             <p class="about-me">
                 Hello world ! Je suis Mava Malonga Alpha, j'ai 24 ans et je suis développeur informatique,
                 Je vous souhaite la bienvenue sur mon site personnel. 
@@ -29,11 +26,9 @@
                 je pratique au quotidien, quelques projets personnels et que je présente certains événements auxquels je participe.<br><br>
                 J’espère que ça va vous plaire ! Si vous souhaitez bavarder, si vous avez des questions ou des remarques, si vous souhaitez 
                 juste me dire bonjour ou me payer un café, n’hésitez pas à <a href="mailto: mavamalonga.alpha@gmail.com">me contacter</a>.</p> 
-            <h5>
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-sliders" viewBox="0 0 16 16">
-              <path fill-rule="evenodd" d="M11.5 2a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM9.05 3a2.5 2.5 0 0 1 4.9 0H16v1h-2.05a2.5 2.5 0 0 1-4.9 0H0V3h9.05zM4.5 7a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM2.05 8a2.5 2.5 0 0 1 4.9 0H16v1H6.95a2.5 2.5 0 0 1-4.9 0H0V8h2.05zm9.45 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zm-2.45 1a2.5 2.5 0 0 1 4.9 0H16v1h-2.05a2.5 2.5 0 0 1-4.9 0H0v-1h9.05z"/>
-            </svg> Savoir-être
-            </h5>
+            <h6>
+              Savoir-être
+            </h6>
             <p class="about-me" id="about-me-2">
               Sens du relationnel, de l’écoute, autonome.<br>
               Facilité d’adaptabilité à des univers nouveaux et à des publics variés.<br>
@@ -46,7 +41,7 @@
         <!-- Center col -->
         <div class="col-md-6">
           <!-- Top Reals -->
-          <h5>Top Réalisations</h5>
+          <h6>Top Réalisations</h6>
           {% for project in projects %}
           <div class="container" id="container-top-projects">
             <div class="card">
@@ -133,7 +128,7 @@
           <br>
 
           <!-- Block Formations -->
-          <h5 class="mb-1">Formations</h5>
+          <h6 class="mb-1">Formations</h6>
           <div class="container container-degrees">
               <div class="card">
                 <div class="card-body">
@@ -178,7 +173,7 @@
 
         <!-- Right col-->
         <div class="col-md-3">
-          <h5>Compétences</h5>
+          <h6>Compétences</h6>
           <div class="accordion accordion-flush" id="accordionFlushExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingOne">
@@ -317,7 +312,7 @@
         </div>
 
         <!--Hobbies-->
-        <h5 class="h5-hobbies">Hobbies</h5>
+        <h6 class="h5-hobbies">Hobbies</h6>
         <div class="container container-hobbies">
           <div class="container">
             <div class="row">
