--- a/templates/base.html
+++ b/templates/base.html
@@ -27,10 +27,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-                <a href="{% url 'index' %}" class="nav-item nav-link" style="font-family: 'Courier New', Courier, monospace; font-weight:bold;">Acceuil</a>
+                <a href="{% url 'index' %}" class="nav-item nav-link" style="font-family: 'Courier New', Courier, monospace; font-weight:bold;">Accueil</a>
             </li>
             <li class="nav-item">
-                <a href="{% url 'projects' %}" class="nav-item nav-link" style="font-family: 'Courier New', Courier, monospace; font-weight:bold;"">Réalisations</a>
+                <a href="{% url 'projects' %}" class="nav-item nav-link" style="font-family: 'Courier New', Courier, monospace; font-weight:bold;">Réalisations</a>
             </li>
             {% if page_name == 'dashboard' %}
             <li class="nav item">
