--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -69,8 +69,8 @@
                 <div class="modal-content">
                   <!-- Modal Header -->
                   <div class="modal-header bg-light">
-                    <h5 class="modal-title">{{ project.project.title }}
-                    </h5>
+                    <img src="{{ project.project.image.image.url }}" width="50px" style="padding-right: 10px;">
+                    <h5 class="modal-title" style="margin-top: -3px;">{{ project.project.title }}</h5>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                   </div>
                   <div class="row">
@@ -87,15 +87,14 @@
                             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
                             <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
                           </svg>
-                        </a>
-                        <img src="{{ project.project.image.image.url }}">
+                        </a><br>
                         <p style="font-size: smaller;">{{ project.project.description|truncatechars:200 }}</p>
                       </div>
                     </div>
                     <!-- Modal body -->
                     <div class="col-md-6">
                       <div class="modal-body">
-                        <h6>Savoir-faire</h6>
+                        <h6>Compétences</h6>
                         <p>
                           <ul>
                             {% for skill in project.skills %}
@@ -178,7 +177,7 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                  Développement back-end
+                  Back-End
                 </button>
               </h2>
               <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
@@ -214,7 +213,7 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    Développement front-end
+                  Front-End
                 </button>
               </h2>
               <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
