--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -38,10 +38,10 @@
   /* 1 card display */
   @media screen and (max-width: 765px) {
   .card {
-    width: 20rem;
+    width: 19rem;
     }
   .nav-pagination {
-    margin-left: 15%; 
+    margin-left: 16%; 
     margin-top: 50px;
   }
   }
@@ -52,7 +52,7 @@
   <div class="container">
     <div class="row">
       <!-- Left col -->
-      <div class="col-md-9">
+      <div class="col-md-9 ">
         <div>
           <div class="row">
             {% for project in projects %}
@@ -84,7 +84,8 @@
 
                       <!-- Modal Header -->
                       <div class="modal-header bg-light">
-                        <h5 class="modal-title">{{ project.project.title }}</h5>
+                        <img src="{{ project.project.image.image.url }}" width="50px" style="padding-right: 10px;">
+                        <h5 class="modal-title" style="margin-top: -3px;">{{ project.project.title }}</h5>
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                       </div>
                       <div class="row">
@@ -102,8 +103,7 @@
                                   <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
                                   <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
                               </svg>
-                            </a>
-                            <img src="{{ project.project.image.image.url }}" width="80%">
+                            </a><br>
                             <p style="font-size: smaller;">{{ project.project.description }}</p>
                           </div>
                         </div>
@@ -111,7 +111,7 @@
 
                           <!-- Modal body -->
                           <div class="modal-body">
-                            <h6>Savoir-faire</h6>
+                            <h6>Compétences</h6>
                             <p style="font-size: smaller;">
                               <ul style="font-size: smaller;">
                                 {% for skill in project.skills %}
