--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -46,9 +46,9 @@
   }
 
 </style>
+
 <!-- Main -->
-<div class="container-fluid bg-light" style="margin-top: 80px;">
-  <div class="container">
+  <div class="container" style="margin-top: 80px;">
     <div class="row">
       <!-- Left col -->
       <div class="col-md-9 ">
@@ -58,7 +58,7 @@
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 .col-xl-4">
               <div class="" style="margin-bottom: 10px;">
                 <div class="card">
-                  <img src="{{ project.project.image.image.url }}" width="100%" height="200px">
+                  <img src="{{ project.project.image.url }}" width="100%" height="200px">
                   <div class="card-body">
 
                     <!-- Badges -->
@@ -83,7 +83,7 @@
 
                       <!-- Modal Header -->
                       <div class="modal-header bg-light">
-                        <img src="{{ project.project.image.image.url }}" width="50px" style="padding-right: 10px;">
+                        <img src="{{ project.project.image.url }}" width="50px" style="padding-right: 10px;">
                         <h5 class="modal-title" style="margin-top: -3px;">{{ project.project.title }}</h5>
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                       </div>
@@ -167,7 +167,6 @@
       </div>
     </div>
   </div>
-</div>
 
 <!-- Pagination -->
 <nav aria-label="..." class="nav-pagination">
