--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,6 +10,14 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+  <style>
+      /* Small screen menuBar */
+      @media screen and (max-width: 500px) {
+        .title-statut {
+          font-size: 70%;
+        }
+      }
+  </style>
 </head>
 
 <body>
@@ -19,7 +26,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-md fixed-top navbar-light bg-white">
         <a href="{% url 'index' %}" style="text-decoration: none">
-        <h6 style="font-family: 'Courier New', Courier, monospace;"><b style="color: black;">MAVA MALONGA Alpha<br><span style="color:#ff9c00; ">Développeur Back-end Python & Django</span></b></h6>
+        <h6 class="title-statut" style="font-family: 'Courier New', Courier, monospace;"><b style="color: black;">MAVA MALONGA Alpha<br><span style="color:#ff9c00; ">Développeur Back-end Python & Django</span></b></h6>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
