--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                 <a href="{% url 'projects' %}" class="nav-item nav-link" style="font-family: 'Courier New', Courier, monospace; font-weight:bold;">Réalisations</a>
             </li>
             <li class="nav item">
-              <a href="{{ curriculum_vitae.pdf.url }}" class="nav-item nav-link" style="font-family: 'Courier New', Courier, monospace; font-weight:bold;">Curriculum vitae</a>
+              <a href="{% url 'curriculum_vitae' %}" class="nav-item nav-link" style="font-family: 'Courier New', Courier, monospace; font-weight:bold;">Curriculum vitae</a>
             </li>
           </ul>
         </div>
