--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -12,19 +12,14 @@
     <div class="row">
 
       <!-- Left col -->
-      <div class="col-md-3">
+      <div class="col-md-3 container-left">
         <div class="container" id="container-left">
           <img src="{% static 'img/dashboard/me.jpg' %}" id="my-photo">
-            <h6>
-              À propos de moi
-            </h6>
+            <h6>À propos de moi</h6>
             <p class="about-me">
                 Hello world ! Je suis Mava Malonga Alpha, j'ai 24 ans et je suis développeur informatique,
                 Je vous souhaite la bienvenue sur mon site personnel. 
-                C’est ici que je partage les péripéties de ma vie de développeur, la veille que 
-                je pratique au quotidien, quelques projets personnels et que je présente certains événements auxquels je participe.<br><br>
-                J’espère que ça va vous plaire ! Si vous souhaitez bavarder, si vous avez des questions ou des remarques, si vous souhaitez 
-                juste me dire bonjour ou me payer un café, n’hésitez pas à <a href="mailto: mavamalonga.alpha@gmail.com">me contacter</a>.</p> 
+                C’est ici que je partage la veille que je pratique au quotidien et quelques projets personnels.
             <h6>
               Savoir-être
             </h6>
@@ -167,6 +162,72 @@
         <!-- Right col-->
         <div class="col-md-3">
           <h6>Compétences</h6>
+          
+        <div class="skills__content">
+          <h3 class="skills__title">Frontend Developer</h3>
+
+          <div class="skills__box">
+            <div class="skills__group">
+              <div class="skills__data">
+                <i class="bx bxs-badge-check"></i>
+
+                <div>
+                  <h3 class="skills__name">HTML</h3>
+                  <span class="skills__level">Basic</span>
+                </div>
+              </div>
+
+              <div class="skills__data">
+                <i class="bx bxs-badge-check"></i>
+
+                <div>
+                  <h3 class="skills__name">CSS</h3>
+                  <span class="skills__level">Advanced</span>
+                </div>
+              </div>
+
+              <div class="skills__data">
+                <i class="bx bxs-badge-check"></i>
+
+                <div>
+                  <h3 class="skills__name">JavaScript</h3>
+                  <span class="skills__level">Intermediate</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="skills__group">
+              <div class="skills__data">
+                <i class="bx bxs-badge-check"></i>
+
+                <div>
+                  <h3 class="skills__name">Bootstrap</h3>
+                  <span class="skills__level">Intermediate</span>
+                </div>
+              </div>
+
+              <div class="skills__data">
+                <i class="bx bxs-badge-check"></i>
+
+                <div>
+                  <h3 class="skills__name">Git</h3>
+                  <span class="skills__level">Intermediate</span>
+                </div>
+              </div>
+
+              <div class="skills__data">
+                <i class="bx bxs-badge-check"></i>
+
+                <div>
+                  <h3 class="skills__name">React</h3>
+                  <span class="skills__level">Intermediate</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
           <div class="accordion accordion-flush" id="accordionFlushExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingOne">
