--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,9 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
   <style>
+      /*=============== GOOGLE FONTS ===============*/
+      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+
       /* Small screen menuBar */
       @media screen and (max-width: 500px) {
         .title-statut {
@@ -22,7 +25,7 @@
 
 <body>
   <!-- Header -->
-  <div class="container-fluid">
+  <div class="container-fluid header">
     <div class="container">
       <nav class="navbar navbar-expand-md fixed-top navbar-light bg-white">
         <a href="{% url 'index' %}" style="text-decoration: none">
