--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -615,5 +615,8 @@
 
     <!--=============== MAIN JS ===============-->
     <script src="{% static 'js/dashboard/main.js' %}"></script>
+
+    <!--=============== API REQUEST ===============-->
+    <script src="{% static 'js/dashboard/api_request.js' %}"></script>
   </body>
 </html>
