--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -419,9 +419,11 @@
           <!-- work 1 -->
           <div class="work__card mix web">
             <img src="{% static 'img/dashboard/work1.jpg' %}" alt="work 1" class="work__img" /><br>
-            <span class="badge badge-info">Python</span>
-                      
-            <span class="badge badge-info">Pygame</span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
 
             <h3 class="work__title">Web design</h3>
 
@@ -480,9 +482,11 @@
           <!-- work 2 -->
           <div class="work__card mix web">
             <img src="{% static 'img/dashboard/work1.jpg' %}" alt="work 1" class="work__img" /><br>
-            <span class="badge badge-info">Python</span>
-                      
-            <span class="badge badge-info">Pygame</span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
 
             <h3 class="work__title">Web design</h3>
 
@@ -541,9 +545,11 @@
           <!-- work 3 -->
           <div class="work__card mix web">
             <img src="{% static 'img/dashboard/work1.jpg' %}" alt="work 1" class="work__img" /><br>
-            <span class="badge badge-info">Python</span>
-                      
-            <span class="badge badge-info">Pygame</span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
 
             <h3 class="work__title">Web design</h3>
 
@@ -602,9 +608,11 @@
           <!-- work 4 -->
           <div class="work__card mix web">
             <img src="{% static 'img/dashboard/work1.jpg' %}" alt="work 1" class="work__img" /><br>
-            <span class="badge badge-info">Python</span>
-                      
-            <span class="badge badge-info">Pygame</span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
 
             <h3 class="work__title">Web design</h3>
 
@@ -663,9 +671,11 @@
           <!-- work 5 -->
           <div class="work__card mix web">
             <img src="{% static 'img/dashboard/work1.jpg' %}" alt="work 1" class="work__img" /><br>
-            <span class="badge badge-info">Python</span>
-                      
-            <span class="badge badge-info">Pygame</span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
 
             <h3 class="work__title">Web design</h3>
 
@@ -724,9 +734,11 @@
           <!-- work 6 -->
           <div class="work__card mix web">
             <img src="{% static 'img/dashboard/work1.jpg' %}" alt="work 1" class="work__img" /><br>
-            <span class="badge badge-info">Python</span>
-                      
-            <span class="badge badge-info">Pygame</span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
+            <span class="badge badge-info"></span>
 
             <h3 class="work__title">Web design</h3>
 
