--- a/knapsack/templates/knapsack/mentions.html
+++ b/knapsack/templates/knapsack/mentions.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load static %}
 <!--=============== MAIN ===============-->
-<div class="container-fluid" style="margin-bottom: 80px; text-align: center;">
+<div class="container-fluid" style="margin-bottom: 80px;margin-top: 5%; text-align: center;">
   <div class="container">
       <div class="container">
           <div class="container">
