--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    {% load static %}
 
     <!--=============== FAVICON ===============-->
     <link rel="shortcut icon" href="{% static 'img/knapsack/favicon.ico' %}" type="image/x-icon" />
@@ -21,17 +21,18 @@
     />
 
     <!--=============== SWIPER CSS ===============-->
+    <link rel="stylesheet" href="{% static 'css/knapsack/swiper-bundle.min.css' %}" />
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="{% static 'css/knapsack/style.css' %}" />
 
-    <title>My Portfolio</title>
+    <title>Alpha | Portfolio</title>
   </head>
   <body>
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="{% url 'home' %}" class="nav__logo">Mon Portfolio</a>
+        <a href="" class="nav__logo">Mon Portfolio</a>
 
         <div class="nav__menu">
           <ul class="nav__list">
@@ -72,12 +73,26 @@
       </nav>
     </header>
 
+    <!--=============== MAIN ===============-->
+    <main class="main">
       <!--=============== HOME ===============-->
       <section class="home section" id="home">
         <div class="home__container container grid">
           <div class="home__data">
+            <!--<span class="home__greeting">Hello, I'm</span>-->
             <h1 class="home__name">Alpha MAVA MALONGA</h1>
             <h3 class="home__education">Développeur Back-End Python & Django</h3>
+
+            <div class="home__buttons">
+              <a
+                download=""
+                href="assets/pdf/Ansel-Cv.pdf"
+                class="button button--ghost"
+              >
+              Curriculum vitae
+              </a>
+              <a href="{% url 'home' %}" class="button button--ghost">Mon portfolio</a>
+            </div>
           </div>
 
           <div class="home__social">
@@ -97,18 +112,13 @@
               <i class="bx bxl-instagram"></i>
             </a>
           </div>
-
-          <a href="{% url 'home' %}" class="home__scroll">
-            <i class="bx bx-mouse home__scroll-icon"></i>
-            <span class="home__scroll-name">Scroll Down</span>
-          </a>
         </div>
         
       </section>
 
       {% block content %} {% endblock %}
 
-
+    </main>
 
     <!--=============== FOOTER ===============-->
     <footer class="footer">
@@ -140,6 +150,7 @@
             <i class="bx bxl-telegram"></i>
           </a>
         </ul>
+
 
         <span class="footer__copy">
           Copyright © 2022 MAVA MALONGA Alpha - <a href="{% url 'mentions-legales' %}">Mentions légales</a>
